fixed bottom image for login page on mobile screens to be centred

--- a/css/home/styles.css
+++ b/css/home/styles.css
@@ -597,6 +597,11 @@ footer {
         width: 150px;
     }
 
+
+    .login-image-container {
+        margin: 10px auto;
+    }
+
 }
 
 @media only screen and (max-width: 375px) {
